# ComputingBootCamp

./: .gitignore  BootCamp_2021.md  Gemfile  LICENSE  LINKCHECK.md  Makefile  Matlab_section  README.md  index.html
.github/: auto_assign.yml
404/: index.html
SelfPaced/: Bram-PatchBootcamp.md  First-Steps.md  Git.md  LinuxReference.md  Symbiflow-VTRBootcamp.md  Symbiflow-prjxray-Bootcamp.md  UpgradeVivadoAndIncreaseVMDiskSpace.md  VirtualMachineCreationInstructions.md  VivadoAndTcl.md  _Sidebar.md  jason2020.md
_0site/: BootCamp_2020.md  feed.xml  index.html
_includes/: head.html
_labs/: 01_GetVirtualMachine.md  03_LinuxReference.md  04_CustomizeLinux.md  05_UpgradeVivadoAndIncreaseVMDiskSpace.md  06_VivadoAndTcl.md  RapidSmithBootcamp.md  SymbiflowRepoNotes.md  bit2fasm.md
_layouts/: page.html
_sass/: _base.scss  _pages.scss  simple-sidebar.scss
bootcampSummary/: learningsuite_data_parser.py
cmake/: notes.txt
cmake/my_cmake_cpp_project1/: CMakeLists.txt
cmake/my_cmake_cpp_project1/apps/: CMakeLists.txt
cmake/my_cmake_cpp_project1/apps/my_program/: CMakeLists.txt  my_program.cpp
cmake/my_cmake_cpp_project1/src/mylib/: CMakeLists.txt  my_file.cpp
create_your_website/: Gemfile  Makefile  _config.yml  index.md
css/: main.css  main.css.map  main.scss
docs/: Gemfile  _config.yml  index.html
fasm2bels/: .gitignore  Makefile  cnt.v  constraints.xdc
python-libs/: csv_parser.py  csv_parser.py:Zone.Identifier  example_data.csv:Zone.Identifier  example_data_big.csv:Zone.Identifier  matplotlib-tutorial.py  numpy-tutorial.py  pandas-tutorial.py
(+364 files in other folders)
